# PlexDiscord

./: Cargo.toml
src/: config.rs  discord.rs  format.rs  main.rs  session_status.rs
