[package]
name = "plex_discord"
version = "0.1.0"
authors = ["Kai Berszin <mail@kaibersz.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^0.7"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde-aux = "^2.1.1"
json_config = "^0.1.4"
rustcord = "^0.2.4"